--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -41,5 +41,7 @@
     .span-4
       .member_background#labeler.last  Members
     .span-16.last
-      = render :partial => 'shared/member', :collection => @club.members
-      .span-4.new_link= link_to "(+) New Member", members_search_path
+      - @club.members do |membership|
+        %p= link_to membership.member.name, membership.member
+      / = render :partial => 'shared/member', :collection => @club.memberships
+      .span-4.new_link= link_to "(+) New Member", new_member_path
