--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -43,7 +43,7 @@
         %span.span-12
           %table
             %tr
-              %th Membership
               %th Club
+              %th Membership
             %tr
-              = render :partial => 'membership', :collection => @member.relationships
+              = render :partial => 'membership', :collection => @member.memberships
