--- a/app/views/members/_membership.html.haml
+++ b/app/views/members/_membership.html.haml
@@ -1,2 +1,3 @@
 %tr
-  %td= link_to membership.club_name, club_path(membership.club)
+  %td= link_to membership.club.name, club_path(membership.club)
+  %td= membership.type
