Fixed route for existing memberships and type edit

--- a/app/views/members/_membership.html.haml
+++ b/app/views/members/_membership.html.haml
@@ -1,3 +1,4 @@
 %tr
   %td= link_to membership.club.name, club_path(membership.club)
   %td= membership.type
+  %td= link_to "(Change)", edit_membership_path(membership)
