Restarting.  Get this out.

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -18,27 +18,20 @@
       - if not @member.my_club.nil? then  
         .span-6.value= link_to @member.my_club.name, @member.my_club 
     .span-20  
-      .span-4#labeler.meeting_background Upcoming Roles
+      .span-4#labeler.meeting_background Roles
       .span-16.last
         %table
           %tr
             %th.value Date
             %th.value Time
             %th.value Role
-          = render :partial => 'role', :collection => @member.upcoming_roles
+          = render :partial => 'role', :collection => @member.last_five_roles
           / TODO: Add in new Role function for a person
-    - if @member.past_roles.count > 0 then
-      .span-20  
-        .span-4#labeler.meeting_background Past Roles
-        .span-16.last
-          %table
-            %tr
-              %th Date
-              %th Time
-              %th Role
-            = render :partial => 'role', :collection => @member.past_roles
     .span-20.last
-      .span-4#labeler.member_background Memberships
+      .span-4
+        #labeler.member_background Memberships
+        = link_to "Add Membership", new_member_membership_path(@member) 
+        
       .span-8.last
         %span.span-12
           %table
