--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -29,34 +29,20 @@
   .span-20
     .span-4
       .meeting_background#labeler.last Upcoming Meetings
+      .span-3.new_link= link_to "(+) New Meeting", new_meeting_path
+      .span-3.new_link= link_to "(->) All Meetings", meetings_path
     .span-16.last
       %table.span-16
         %th Date
         %th Time
         %th Theme
         = render :partial => 'shared/meeting', :collection => @club.upcoming_meetings
-      .span-3.new_link= link_to "(+) New Meeting", new_meeting_path
-      .span-3.new_link= link_to "(->) All Meetings", meetings_path
   .span-20
     .span-4
       .member_background#labeler.last  Members
+      .span-4.new_link= link_to "(+) New Member", new_member_path
+      .span-3.new_link= link_to "(->) All Members", memberships_path
     .span-16.last
       - @club.active_members.each do |membership|
         %p= link_to membership.member.name, membership.member
       / = render :partial => 'shared/member', :collection => @club.memberships
-  .span-20
-    .span-4
-      .member_background#labeler.last Officers
-    .span-16.last
-      - @club.officers.each do |membership|
-        %p= link_to membership.member.name, membership.member
-      / = render :partial => 'shared/member', :collection => @club.memberships
-      .span-4.new_link= link_to "(+) New Member", new_member_path
-  .span-20
-    .span-4
-      .member_background#labeler.last Guests
-    .span-16.last
-      - @club.guests.each do |membership|
-        %p= link_to membership.member.name, membership.member
-      / = render :partial => 'shared/member', :collection => @club.memberships
-      .span-4.new_link= link_to "(+) New Member", new_member_path
