--- a/app/views/member_mailer/password_reset.text.haml
+++ b/app/views/member_mailer/password_reset.text.haml
@@ -1,3 +1,7 @@
-MemberMailer#password_reset
+A message from TM Schedule Me:
 
-= @greeting + ", find me in app/views/member_mailer/password_reset.text.haml"
+To reset your password, click on the link below:
+
+= edit_password_reset_url(@member.password_reset_token) 
+
+If you did not request that your password be reset, please ignore this email, and your password will stay as it is.
