--- a/app/views/welcome/pricing.html.haml
+++ b/app/views/welcome/pricing.html.haml
@@ -9,7 +9,7 @@
       .span-4.prepend-1
         %h3 Starter
       .span-15.last
-        %ul
+        %ul.pricing
           %li Unlimited Members
           %li Unlimited Speeches and meeting roles
           %li Unlimited Meetings  
@@ -17,7 +17,7 @@
       .span-4.prepend-1
         %h3 Essential
       .span-15.last
-        %ul
+        %ul.pricing
           Everything in Starter plus +
           %li E-mail Notifications to members 
           %li E-mail support
@@ -25,21 +25,26 @@
     .span-18.prepend-1.last
       %table.pricing
         %th Subscription
-        %th.number 1 Month
-        %th.number 6 Months
-        %th.number 12 Months
+        %th.number Monthly
+        %th.number Six Months
+        %th.number Annual
         %tr
-          %td Essential
+          %td Starter
           %td.number $6
           %td.number $30
           %td.number $54
         %tr
-          %td Starter
+          %td Essential
           %td.number $8
           %td.number $40
           %td.number $72
         %tr
-          %td
+          %td 
+          %td.italic  
+          %td.italic One Month Free
+          %td.italic Two Months Free
+        %tr
+          %td 
           %td.italic Easy to pay
-          %td.italic Matches membership period
+          %td.italic Matches Memberships 
           %td.italic Biggest savings!
