--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -5,6 +5,7 @@
       = f.input :address, :as => :text, :required => false, :input_html => { :rows => 4}
       = f.input :club_number, :as => :string, :required => false
       = f.input :plan_type, :as => :radio, :collection => ["Essential", "Starter"]
+      = f.input :billing_period, :as => :radio, :collection => ["Monthly", "Six Months", "Annual"]
   .span-10.last
     = f.buttons :commit
     = link_to '<- Back to club', @club
