--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,8 @@
-!!! XML iso-8859-1
+!!! xml iso-8859-1
 
 %html
 %head
-  %title= @header_text || "TM Schedule Me"
+  %title= @header_text || "tm schedule me"
   = stylesheet_link_tag("blueprint/screen.css")
   = stylesheet_link_tag("blueprint/ie.css")
   = stylesheet_link_tag "blueprint/print.css", :media => "print"
@@ -17,10 +17,10 @@
   .container
     .span-24#header
       .span-13#site_title
-        TM Schedule
-      .span-10.last
-        .span-10.append-1.log_in_bar#header_right= render "layouts/nav_login"
-        .span-10.log_in_bar.last= render "layouts/nav_tabs"
+        =@header_text || "TM Schedule"
+      .span-11.last
+        .span-10.log_in_bar#header_right= render "layouts/nav_login"
+        .span-11.prepend-1.log_in_bar.last= render "layouts/nav_tabs"
     = yield
     .span-24#footer= render "layouts/nav_footer"
     
