Breaks membership add for new people
The flow isn't working yet on new members.  This needs to be mapped out.

--- a/app/views/memberships/_member.html.haml
+++ b/app/views/memberships/_member.html.haml
@@ -1,4 +1,4 @@
 %tr
-  %td= link_to club.name, club
-  %td= link_to club.type, club
-  %td= link_to "(Edit)", edit_relationship_path(club)
+  %td= link_to member.name, member
+  /%td= link_to club.type, club
+  /%td= link_to "(Edit)", edit_relationship_path(club)
