--- a/app/views/memberships/index.html.haml
+++ b/app/views/memberships/index.html.haml
@@ -1,20 +1,24 @@
 %span.span-4
   .span-4#lead_box.member_background Members
-  /.span-4= link_to '(New Membership)', :action => "search"
+  .span-4= link_to '(+) New Member', new_member_path
 %span.span-16
-  .span-20#lead_box
-    = link_to @club.name, @club, :style => 'text-decoration: none'
-  .span-20#header_box Members
-  %table
-    = render :partial => 'member', :collection => @members
+  .span-20
+    .span-4#labeler Club
+    .span-16.last#lead_box
+      = link_to @club.name, @club, :style => 'text-decoration: none'
+  .span-20
+    .span-4#labeler Members 
+    .span-16.last
+      %table
+        = render :partial => 'member', :collection => @members
    
-  .span-20#header_box Guests
-  %table
-    = render :partial => 'member', :collection => @guests
-
-
-  .span-20#header_box Officers
-  %table
-    = render :partial => 'member', :collection => @officers
-%br
-
+  .span-20
+    .span-4#labeler Guests
+    .span-16.last
+      %table
+        = render :partial => 'member', :collection => @guests
+  .span-20
+    .span-4#labeler Officers
+    .span-16.last
+      %table
+        = render :partial => 'member', :collection => @officers
