--- a/app/views/memberships/index.html.haml
+++ b/app/views/memberships/index.html.haml
@@ -22,3 +22,10 @@
     .span-16.last
       %table
         = render :partial => 'member', :collection => @officers
+  - if current_user.admin_for(current_club.id)
+    .span-20
+      .span-4#labeler Administrators
+      .span-16.last
+        %table
+          = render :partial => 'member', :collection => @admins
+   
