--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,8 @@
   = stylesheet_link_tag("special.css")
   = csrf_meta_tag
 %body
-  %p#notice= notice 
+  - if notice 
+    %p#notice= notice 
   %p#class= alert
   .container
     .span-24#header
