--- a/app/views/memberships/new.html.haml
+++ b/app/views/memberships/new.html.haml
@@ -4,7 +4,7 @@
 %span.span-16
   .span-20#lead_box
     = link_to current_club.name, current_club, :style => 'text-decoration: none'
-  .span-20#header_box= 'Adding ' + @member.name + 'to the club'
+  .span-20#header_box= 'Adding membership for ' + @member.name + ' to the club'
   .span-20
     = render 'form'
 
