--- a/public/stylesheets/special.css
+++ b/public/stylesheets/special.css
@@ -166,7 +166,10 @@ ul.pricing {
   padding-top: 1em;
   }
 
-#notice { background-color: #A4E7A0; border: 1px solid #26722D; }
+#notice { background-color: #A4E7A0; 
+  border: 1px solid #26722D;
+  text-align: left;}
+
 #error { background-color: #F0A8A8; border: 1px solid #900; }
 #notice, #error { width: 90%; margin: 0 auto 10px auto; padding: 5px; }
 #notice p, #error p { margin-left: 20px; padding: 0; font-size: .75em; color: #000; }
