--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,8 +12,11 @@
   = stylesheet_link_tag("special.css")
   = javascript_include_tag 'jquery', 'rails', 'application'
   = javascript_include_tag "jquery-ui.min.js", "application"
+  = javascript_include_tag "https://js.stripe.com/v1/", "application"
   = stylesheet_link_tag "jquery-ui.css"
   = csrf_meta_tag
+  = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
+  %script{:type=>"text/javascript", :src => "javascripts/striper.js"}
 %body
   %p#class= alert
   .container
