--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
   = javascript_include_tag "https://js.stripe.com/v1/", "application"
   = stylesheet_link_tag "jquery-ui.css"
   = csrf_meta_tag
-  = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
+  / = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
   %script{:type=>"text/javascript", :src => "javascripts/striper.js"}
 %body
   %p#class= alert
