--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,10 +13,10 @@
   = javascript_include_tag 'jquery', 'rails', 'application'
   = javascript_include_tag "jquery-ui.min.js", "application"
   = javascript_include_tag "https://js.stripe.com/v1/", "application"
+  = javascript_include_tag "striper.js"
   = stylesheet_link_tag "jquery-ui.css"
-  = csrf_meta_tag
-  / = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
-  %script{:type=>"text/javascript", :src => "javascripts/striper.js"}
+  = csrf_meta_tags
+  = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
 %body
   %p#class= alert
   .container
