--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,17 +3,18 @@
 %html
 %head
   %title= @header_text || "tm schedule me"
-  = stylesheet_link_tag("blueprint/screen.css")
-  = stylesheet_link_tag("blueprint/ie.css")
-  = stylesheet_link_tag "blueprint/print.css", :media => "print"
-  = stylesheet_link_tag "blueprint/plugins/tabs/screen.css"
+  /= stylesheet_include_tag "application"
+  = stylesheet_link_tag("/stylesheets/blueprint/screen.css")
+  = stylesheet_link_tag("/stylesheets/blueprint/ie.css")
+  = stylesheet_link_tag "/stylesheets/blueprint/print.css", :media => "print"
+  = stylesheet_link_tag "/stylesheets/blueprint/plugins/tabs/screen.css"
   = stylesheet_link_tag("formtastic_changes")
   = stylesheet_link_tag("formtastic")
   = stylesheet_link_tag("special.css")
   = javascript_include_tag 'jquery', 'rails', 'application'
   = javascript_include_tag "jquery-ui.min.js", "application"
   = javascript_include_tag "https://js.stripe.com/v1/", "application"
-  = javascript_include_tag "striper.js"
+  /= javascript_include_tag "striper.js"
   = stylesheet_link_tag "jquery-ui.css"
   = csrf_meta_tags
   = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
