--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -1,6 +1,6 @@
 %span.span-4
   .span-4#lead_box.club_background Club
-  - if current_user.admin_for(current_club.id)
+  - if current_user.admin_for(current_club)
     #action_box
       .span-4
         = link_to '(Change)', edit_club_path(@club)
