--- a/app/views/welcome/pricing.html.haml
+++ b/app/views/welcome/pricing.html.haml
@@ -4,47 +4,32 @@
 .span-24
   .span-4#lead_box.club_background Pricing
   .span-20.last
-    %h2 TM Schedule Price plans are very simple.
+    %h2 TM Schedule Price plans are simple.  
+    %p For a monthly, biannual or annual subscription, your club will get these benefits:
     .span-20.last
-      .span-4.prepend-1
-        %h3 Starter
-      .span-15.last
+      .span-15.prepend-1.last
         %ul.pricing
           %li Unlimited Members
           %li Unlimited Speeches and meeting roles
           %li Unlimited Meetings  
-    .span-20.last
-      .span-4.prepend-1
-        %h3 Essential
-      .span-15.last
-        %ul.pricing
-          Everything in Starter plus +
           %li E-mail Notifications to members 
           %li E-mail support
     %h2 Rates
+    %p You can pay monthly, but the farther you pay ahead, the more you will save.
     .span-18.prepend-1.last
       %table.pricing
-        %th Subscription
-        %th.number Monthly
-        %th.number Six Months
-        %th.number Annual
+        %th Period
+        %th Rate
+        %th.number Savings
         %tr
-          %td Starter
-          %td.number $6
-          %td.number $30
-          %td.number $54
-        %tr
-          %td Essential
+          %td Monthly
           %td.number $8
+          %td.number -
+        %tr
+          %td Every Six Months (Biannual)
           %td.number $40
-          %td.number $72
-        %tr
-          %td 
-          %td.italic  
           %td.italic One Month Free
-          %td.italic Two Months Free
         %tr
-          %td 
-          %td.italic Easy to pay
-          %td.italic Matches Memberships 
-          %td.italic Biggest savings!
+          %td Annual
+          %td.number $72
+          %td.italic Two Months Free
