--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,8 @@
   = stylesheet_link_tag("special.css")
   = javascript_include_tag 'jquery', 'rails', 'application'
   = javascript_include_tag "jquery-ui.min.js", "application"
-  = javascript_include_tag "https://js.stripe.com/v1/", "application"
+  /= javascript_include_tag "https://js.stripe.com/v1/", "application"
+  /= javascript_include_tag "https://wallet-web.sandbox.google.com/online/v2/merchant/merchant.js", "application"
   /= javascript_include_tag "striper.js"
   = stylesheet_link_tag "jquery-ui.css"
   = csrf_meta_tags
