--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,7 +1,6 @@
 %span.span-4
-  .span-4#header_box.member_background Member
-  .span-2= link_to '(return)', @member
+  .span-4#lead_box.member_background Member
 %span.span-16
-  %span.span-last#header_box New member
+  %span.span-last#lead_box New member
   = render 'form'
   / = link_to 'All Members', members_path
