--- a/app/views/memberships/index.html.haml
+++ b/app/views/memberships/index.html.haml
@@ -1,11 +1,8 @@
 %span.span-4
   .span-4#lead_box.member_background Members
-  .span-4= link_to '(+) New Member', new_member_path
+  #action_box
+    .span-4= link_to '(Add)', new_member_path()
 %span.span-16
-  .span-20
-    .span-4#labeler Club
-    .span-16.last#lead_box
-      = link_to @club.name, @club, :style => 'text-decoration: none'
   .span-20
     .span-4#labeler Members 
     .span-16.last
