--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,8 @@
   %p#class= alert
   .container
     .span-24#header
-      .span-13#site_title
+      .span-4=link_to image_tag("tmschedule_me_web_icon.png"), "/"
+      .span-9#site_title
         =@header_text || "TM Schedule"
       .span-11.last
         .span-10.log_in_bar#header_right= render "layouts/nav_login"
