Removes header text for now

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,8 +23,7 @@
   .container
     .span-24#header
       .span-4=link_to image_tag("tmschedule_me_web_icon.png"), "/"
-      .span-9#site_title
-        =@header_text || "TM Schedule"
+      .span-9#site_title ...............
       .span-11.last
         .span-10.log_in_bar#header_right= render "layouts/nav_login"
         .span-11.prepend-1.log_in_bar.last= render "layouts/nav_tabs"
