--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -2,10 +2,10 @@
   .span-4#lead_box.club_background Club
   #action_box
     - if current_user.admin_for(current_club)
-      .span-4
-        = link_to '(Change)', edit_club_path(@club)
-    .span-4
-      = link_to '(Add New)', new_club_path()
+      .span-4#image_box
+        = link_to image_tag("change_club_button.png"), edit_club_path(@club)
+    .span-4#image_box
+      = link_to image_tag("add_new_club_button.png"), new_club_path()
 .span-20.last
   .span-20
     .span-4#labeler Name
