--- a/app/views/clubs/_form.html.haml
+++ b/app/views/clubs/_form.html.haml
@@ -6,6 +6,9 @@
       = f.input :club_number, :as => :string, :required => false
       = f.input :billing_period, :as => :radio, :collection => ["Monthly", "Six Months", "Annual"]
       = link_to "Plans", pricing_path
-  .span-10.last
-    = f.buttons :commit
-    = link_to '<- Back to club', @club
+  .span-10.last 
+    = link_to image_tag("update_club_button.png"), new_club_path()
+    = f.buttons do
+      #button_update
+        = f.submit
+
