--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -3,8 +3,8 @@
 .span-4
   .span-4#lead_box.member_background Member
   #action_box
-    .span-4= link_to '(Change)', edit_member_path(@member)
-    .span-4= link_to '(Add)', new_member_path()
+    .span-4= link_to image_tag("change_member_button.png"), edit_member_path(@member)
+    .span-4= link_to image_tag("add_member_button.png"), new_member_path()
 .span-20.last
   .span-20
     .span-20
