--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -27,8 +27,7 @@
   .span-20
     .span-4
       .meeting_background#labeler.last Upcoming Meetings
-      .span-3.new_link= link_to "(+) New Meeting", new_meeting_path
-      .span-3.new_link= link_to "(->) All Meetings", meetings_path
+      .span-3.new_link= link_to image_tag("add_explicit_meeting_button.png"), new_meeting_path
     .span-16.last
       %table.span-16
         %th Date
@@ -38,7 +37,7 @@
   .span-20
     .span-4
       .member_background#labeler.last  Members
-      .span-4.new_link= link_to "(+) New Member", new_member_path
+      .span-4.new_link= link_to image_tag("add_explicit_member_button.png"), new_member_path
     .span-16.last
       %table.span-16
         %th Name
