--- a/app/views/memberships/_form.html.haml
+++ b/app/views/memberships/_form.html.haml
@@ -3,5 +3,5 @@
     = f.inputs do
       = f.input :member, :as => :hidden, :value => @membership.member.id
       = f.input :club, :as => :hidden, :value => @membership.club.id
-      = f.input :member_type, :as => :radio, :collection => ['Guest', 'Member', 'Officer', 'Alumni', 'Admin']
+      = f.input :membership_type, :as => :check_boxes, :collection => ['Guest', 'Member', 'Officer']
     = f.buttons :commit
