--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
   /= javascript_include_tag "https://wallet-web.sandbox.google.com/online/v2/merchant/merchant.js", "application"
   /= javascript_include_tag "striper.js"
   = stylesheet_link_tag "jquery-ui.css"
-  = favicon_link_tag "/favicon.ico?1"
+  = favicon_link_tag "/favicon.ico"
   = csrf_meta_tags
 %body
   %p#class= alert
