Adds club name to schedule

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -21,6 +21,7 @@
             %th.value Date
             %th.value Time
             %th.value Role
+            %th.value Club
           = render :partial => 'role', :collection => @member.last_five_roles
           / TODO: Add in new Role function for a person
     .span-20.last
