--- a/app/views/members/_role.html.haml
+++ b/app/views/members/_role.html.haml
@@ -2,3 +2,4 @@
   %td= link_to role.meeting.meeting_date_pretty,[role.meeting.club, role.meeting]
   %td= link_to role.meeting.meeting_time_part,[role.meeting.club, role.meeting]
   %td= role.role_type
+  %td= role.meeting.club.name
