--- a/app/views/memberships/_form.html.haml
+++ b/app/views/memberships/_form.html.haml
@@ -6,4 +6,5 @@
       = f.input :is_guest, :as => :boolean
       = f.input :is_member, :as => :boolean
       = f.input :is_officer, :as => :boolean
-    = f.buttons :commit
+  .span-10.prepend-2.last 
+    %input{:type=>'image', :value => 'submit', :src => "/images/update_member_button.png"}
