Adds new image for new members

--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,6 +1,11 @@
-%span.span-4
+.span-4
   .span-4#lead_box.member_background Member
-%span.span-16
-  %span.span-last#lead_box New member
+.span-16
+  .span-16.last#lead_box New members take three simple steps
+  .span-15.prepend-1.last#instructions
+    .span-15.last 1) Enter an email address
+    .span-15.last 2) Enter the member's name
+    .span-15.last 3) Select a membership type
+
   = render 'form'
   / = link_to 'All Members', members_path
