--- a/app/views/memberships/index.html.haml
+++ b/app/views/memberships/index.html.haml
@@ -1,7 +1,7 @@
 .span-4
   .span-4#lead_box.member_background Members
   #action_box
-    .span-4= link_to image_tag("add_member_button.png"), members_search_path
+    .span-4= link_to image_tag("add_member_button.png"), new_member_path
 .span-16
   .span-20
     .span-4#labeler Members 
