Trying to debug emailing.

--- a/app/views/clubs/show.html.haml
+++ b/app/views/clubs/show.html.haml
@@ -10,6 +10,7 @@
   .span-20
     .span-4#labeler Name
     .span-16.last.value= @club.name
+    .span-16.last.value= @tester
   .span-20
     .span-4#labeler Address
     .span-16.last.value
