--- a/app/views/member_mailer/welcome_confirm_new_user.html.haml
+++ b/app/views/member_mailer/welcome_confirm_new_user.html.haml
@@ -16,6 +16,12 @@
 %p 
   Please confirm your email address by clicking the following link:
 
+%p
+  %a{:href => url_for(:host => "localhost:3000",
+              :controller => "members",
+              :action => "validate",
+              :id => @member.validation_token)} Confirm Me!
+
 %p 
   Or copy and paste the the following text into your browser's navigation bar.
 
@@ -24,7 +30,7 @@
 
 %h4 TM Schedule Me!
 
-// = image_tag attachments['tmschedule_me_web_icon.png']
+//%a{:href=> "./#{@validate_url}"} Clicker!
 
 
 
