--- a/app/views/members/validation_sent.html.haml
+++ b/app/views/members/validation_sent.html.haml
@@ -7,7 +7,7 @@
     .span-4= link_to image_tag("add_member_button.png"), new_member_path()
 .span-20.last
   .span-20
-    %h2 Congratulations #{@member.name}
-    %h3 Your e-mail account has been confirmed and you can now use TM Schedule Me.
-    %he Click on the tabs above to go to the various parts of this application.
+    %h2 Validation request sent to #{@member.name}
+    %h3 A validation e-mail has been sent to #{@member.email}
+    %h3 When you receive the e-mail, click the confirmation.  As soon as your account is confirmed, you will start receiving notifications and be able to update your preferences.
 
