Fixes url_for in mail

--- a/app/views/member_mailer/welcome_confirm_new_user.html.haml
+++ b/app/views/member_mailer/welcome_confirm_new_user.html.haml
@@ -19,7 +19,8 @@
 %p
   %a{:href => url_for(:controller => "members",
               :action => "validate",
-              :id => @member.validation_token)} Confirm Me!
+              :id => @member.validation_token, 
+              :only_path => false)} Confirm Me!
 
 %p 
   Or copy and paste the the following text into your browser's navigation bar.
